--- a/firebase_1/src/styles.css
+++ b/firebase_1/src/styles.css
@@ -64,6 +64,24 @@ section {
 
 /* User Section  */
 
+.user-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.8em;
+}
+
+.user-section img {
+    width: 3.75em;
+    height: 3.75em;
+    border-radius: 100%;
+    border: var(--border-width) solid var(--dark-color);
+}
+
+.user-section h2{
+    font-size: 1.2em;
+}
+
 /* Nav  */
 
 nav {
@@ -85,6 +103,12 @@ nav {
 
 #logged-out-view .container{
     gap: 2em;
+}
+
+.app-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 /* Common for elements */
