--- a/firebase_1/src/styles.css
+++ b/firebase_1/src/styles.css
@@ -82,6 +82,14 @@ section {
     font-size: 1.2em;
 }
 
+/* Post Section */
+
+.post-section {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
 /* Nav  */
 
 nav {
@@ -108,27 +116,43 @@ nav {
 .app-container {
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 2em;
 }
 
 /* Common for elements */
 
-input, button {
+input, button, textarea {
     font-family: inherit;
     padding: var(--element-padding);
     border-radius: var(--element-border-radius);
     width: 100%;
     box-sizing: border-box;
+}
+
+input, button {
     font-size: 1.1em;
     text-align: center;
     border: var(--border-width) solid var(--dark-color);
 }
 
-input:focus, button:focus {
+input:focus, button:focus, textarea:focus {
     outline: none;
 }
 
 /* Input Fields */
+
+textarea {
+    font-size: 1em;
+    border: 0;
+    box-shadow: 3px 3px 3px 1px rgb(0, 0, 0, .25);
+    resize: none;
+    height: 6em;
+}
+
+textarea::placeholder {
+    color: var(--grey-color);
+    opacity: 1;
+}
 
 input {
     font-weight: 300;
