--- a/firebase_1/src/styles.css
+++ b/firebase_1/src/styles.css
@@ -90,6 +90,43 @@ section {
     gap: 1em;
 }
 
+
+/* Mood Emojis */
+
+.mood-emojis {
+    display: flex;
+}
+
+.mood-emoji-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .3em;
+    background-color: transparent;
+    font-size: .8em;
+    border: 0;
+}
+
+.mood-emoji-btn:hover {
+    transform: scale(1.2);
+}
+
+.mood-emoji-btn img {
+    width: 3.1em;
+    height: 3.1em;
+}
+
+.selected-emoji {
+    transform: scale(1.2);
+    opacity: 1;
+}
+
+.unselected-emoji {
+    transform: scale(1);
+    opacity: 0.5;
+}
+
+
 /* Nav  */
 
 nav {
